@@ -1,2 +1,2 @@
 const char *mversion="3.9.9";
-const char *mdate = "3 March 2003";
+const char *mdate = "24 May 2003";
